first version of everything!

--- a/deriving-internalonly.tex
+++ b/deriving-internalonly.tex
@@ -87,7 +87,7 @@ Consider the first situation in which the internal and the external case match. 
 
 Consider now the situation in the internal case wins the case competition. The light head consists of a phi and case feature portmanteau. The relative pronoun consists of a phi and case feature portmanteau that contains at least one more case feature than the light head (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-intonly}) plus an additional morpheme that spells out the feature \tsc{rel}. The lexical entries create a syntactic structure such that the light head is structurally contained within the relative pronoun. Therefore, the light head can be deleted, and the relative pronoun surfaces, bearing the internal case.
 
-Finally, consider the situation in which the external case wins the case competition. The relative pronoun consists of a phi and case feature portmanteau and an additional morpheme that spells out the feature \tsc{rel}. Compared to the relative pronoun, the light head lacks the morpheme that spells out \tsc{rel}, and it contains at least one more case feature (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-intonly}). The lexical entries create a syntactic structure such that neither the light head nor the relative pronoun is a constituent that is contained within the other element. Therefore, none of the elements can be deleted, and there is no headless relative construction possible.
+Finally, consider the situation in which the external case wins the case competition. The relative pronoun consists of a phi and case feature portmanteau and an additional morpheme that spells out the feature \tsc{rel}. Compared to the relative pronoun, the light head lacks the morpheme that spells out \tsc{rel}, and it contains at least one more case feature (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-intonly}). The lexical entries create a syntactic structure such that neither the light head nor the relative pronoun is structurally contained within the other element. Therefore, none of the elements can be deleted, and there is no headless relative construction possible.
 
 In Chapter \ref{ch:typology}, I showed that Modern German is a language of the internal-only type. In this chapter, I show that Modern German light heads and relative pronouns have the type of internal syntax described in Figure \ref{fig:rel-lh-intonly-simple}. I give a compact version of the internal syntax of Modern German light heads and relative pronouns in Figure \ref{fig:rel-lh-mg}.
 
@@ -1189,7 +1189,7 @@ To summarize, I decomposed the relative pronoun into the two morphemes: \tit{we}
 
 \section{The Modern German (extra) light head}\label{sec:light-mg}
 
-I have suggested that headless relatives are derived from light-headed relatives. The light head or the relative pronoun can be deleted when either of them is a constituent that is contained within the other one. In the introduction of this chapter, I claimed that the internal syntax of light heads in Modern German looks as shown in \ref{ex:mg-lh-complex}.
+I have suggested that headless relatives are derived from light-headed relatives. The light head or the relative pronoun can be deleted when either of them is structurally contained within the other one. In the introduction of this chapter, I claimed that the internal syntax of light heads in Modern German looks as shown in \ref{ex:mg-lh-complex}.
 
 \ex.\label{ex:mg-lh-complex}
 \begin{forest} boom
@@ -1878,6 +1878,6 @@ I derive this from the internal syntax of light heads and relative pronouns in M
   \label{fig:rel-lh-mg-sum}
 \end{figure}
 
-A crucial characteristic of internal-only languages such as Modern German is that they have a portmanteau for phi and case features. Therefore, the light head is a constituent that is contained within the relative pronoun when the internal and the external case match and when the internal case is the more complex one. As a result, the light head can be deleted, and the relative pronoun can surface, bearing the internal case.
+A crucial characteristic of internal-only languages such as Modern German is that they have a portmanteau for phi and case features. Therefore, the light head is structurally contained within the relative pronoun when the internal and the external case match and when the internal case is the more complex one. As a result, the light head can be deleted, and the relative pronoun can surface, bearing the internal case.
 
 When the internal case is the more complex one, neither the light head nor the relative pronoun is structurally contained within the other element. None of the elements can be deleted, and there is no grammatical headless relative possible.
