--- a/deriving-matching.tex
+++ b/deriving-matching.tex
@@ -97,13 +97,13 @@ These lexical entries lead to the grammaticality pattern shown in Table \ref{tbl
 \label{tbl:overview-matching}
 \end{table}
 
-Consider first the situation in which the internal and the external case match. The light head consists of a phi feature morpheme and a case feature morpheme. The relative pronoun consists of the same two morphemes plus an additional morpheme that spells out the feature \tsc{rel}. The lexical entries create a syntactic structure such that the light head is a constituent that is structurally contained within the relative pronoun. Therefore, the light head can be deleted, and the relative pronoun surfaces, bearing the internal case.
+Consider first the situation in which the internal and the external case match. The light head consists of a phi feature morpheme and a case feature morpheme. The relative pronoun consists of the same two morphemes plus an additional morpheme that spells out the feature \tsc{rel}. The lexical entries create a syntactic structure such that the light head is structurally contained within the relative pronoun. Therefore, the light head can be deleted, and the relative pronoun surfaces, bearing the internal case.
 In this situation, whether there is a phi and case feature portmanteau (as in internal-only languages) or two separate morphemes for the features (as in matching languages) does not make a difference for whether or not the light head can be deleted. It can in both cases.
 
-Consider now the situation in the internal case wins the case competition. The light head consists of a phi feature morpheme and a case feature morpheme. The relative pronoun consists of the same phi feature morpheme, a case morpheme that that contains at least one more case feature than the light head (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-matching}) plus an additional morpheme that spells out the feature \tsc{rel}. The lexical entries create a syntactic structure such that neither the light head nor the relative pronoun is a constituent that is contained within the other element. Therefore, none of the elements can be deleted, and there is no headless relative construction possible.
+Consider now the situation in the internal case wins the case competition. The light head consists of a phi feature morpheme and a case feature morpheme. The relative pronoun consists of the same phi feature morpheme, a case morpheme that that contains at least one more case feature than the light head (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-matching}) plus an additional morpheme that spells out the feature \tsc{rel}. The lexical entries create a syntactic structure such that neither the light head nor the relative pronoun is structurally contained within the other element. Therefore, none of the elements can be deleted, and there is no headless relative construction possible.
 In this situation, whether there is a phi and case feature portmanteau (as in internal-only languages) or two separate morphemes for the features (as in matching languages) makes crucial difference for whether or not the light head can be deleted. It can when there is a phi and case feature portmanteau and it cannot when there are two separate morphemes for the features.
 
-Finally, consider the situation in which the external case wins the case competition. The relative pronoun consists of a phi feature morpheme, a case feature morpheme and an additional morpheme that spells out the feature \tsc{rel}. Compared to the relative pronoun, the light head lacks the morpheme that spells out \tsc{rel}, and it contains at least one more case feature (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-matching}). The lexical entries create a syntactic structure such that neither the light head nor the relative pronoun is a constituent that is contained within the other element. Therefore, none of the elements can be deleted, and there is no headless relative construction possible.
+Finally, consider the situation in which the external case wins the case competition. The relative pronoun consists of a phi feature morpheme, a case feature morpheme and an additional morpheme that spells out the feature \tsc{rel}. Compared to the relative pronoun, the light head lacks the morpheme that spells out \tsc{rel}, and it contains at least one more case feature (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-matching}). The lexical entries create a syntactic structure such that neither the light head nor the relative pronoun is structurally contained within the other element. Therefore, none of the elements can be deleted, and there is no headless relative construction possible.
 In this situation, whether there is a phi and case feature portmanteau (as in internal-only languages) or two separate morphemes for the features (as in matching languages) does not make a difference for whether or not the light head or the relative pronoun can be deleted. It cannot in both cases.
 
 In Chapter \ref{ch:typology}, I showed that Polish is a language of the matching type. In this chapter, I show that Polish light heads and relative pronouns have the type of internal syntax described in Figure \ref{fig:rel-lh-matching-simple}. I give a compact version of the internal syntax of Polish light heads and relative pronouns in Figure \ref{fig:rel-lh-pol}.
@@ -1139,7 +1139,7 @@ To summarize, I decomposed the relative pronoun into three morphemes: \tit{k}, \
 
 \section{The Polish extra light head}\label{sec:pol-elh}
 
-I have suggested that headless relatives are derived from light-headed relatives. The light head or the relative pronoun can be deleted when either of them is a constituent that is contained within the other one. In the introduction of this chapter, I claimed that the internal syntax of light heads in Polish looks as shown in \ref{ex:pol-lh-complex}.
+I have suggested that headless relatives are derived from light-headed relatives. The light head or the relative pronoun can be deleted when either of them is structurally contained within the other one. In the introduction of this chapter, I claimed that the internal syntax of light heads in Polish looks as shown in \ref{ex:pol-lh-complex}.
 
 \ex.\label{ex:pol-lh-complex}
 \begin{forest} boom
@@ -1472,8 +1472,8 @@ I give three examples, in which the internal and external case vary.
 I start with an example with matching cases, in which the internal and the external case are both accusative.
 Then I give an example in which the internal dative case is more complex than the external accusative case.
 I end with an example in which the external dative case is more complex than the internal accusative case.
-I show that the first example is grammatical and that the last two are not. I derive this by showing that only in the first situation the light head is a constituent that is structurally contained within the relative pronoun, and that it can therefore then be deleted.
-In the other two examples, neither the light head nor the relative pronoun is a constituent that is structurally contained in the other element.
+I show that the first example is grammatical and that the last two are not. I derive this by showing that only in the first situation the light head is structurally contained within the relative pronoun, and that it can therefore then be deleted.
+In the other two examples, neither the light head nor the relative pronoun is structurally contained in the other element.
 I do not discuss formal containment in this chapter, because it never leads to a successful deletion when structural containment does not.
 
 I start with the matching cases.
@@ -1581,7 +1581,7 @@ As usual, I circle the part of the structure that corresponds to a particular le
 I draw a dashed circle around the biggest possible element that is structurally a constituent in both the extra light head and the relative pronoun.
 
 The extra light head consists of two constituents: the \tsc{an}P and the (lower) \tsc{acc}P. Together they form the (higher) \tsc{acc}P.
-This (higher) \tsc{acc}P is a constituent that is structurally contained within the relative pronoun. Therefore, the extra light head can be deleted. I signal the deletion of the extra light head by marking the content of its circle gray.
+This (higher) \tsc{acc}P is structurally contained within the relative pronoun. Therefore, the extra light head can be deleted. I signal the deletion of the extra light head by marking the content of its circle gray.
 The surface pronoun is the relative pronoun that bears the internal case: \tit{kogo}.
 
 I continue with the example in which the internal case is more complex than the external case.
@@ -1924,6 +1924,6 @@ I derive this from the internal syntax of light heads and relative pronouns in P
   \label{fig:rel-lh-pol-sum}
 \end{figure}
 
-A crucial characteristic of matching languages such as Polish is that they have separate morphemes for phi and case features. Therefore, the light head is a constituent that is contained within the relative pronoun when the internal and the external case match. As a result, the light head can be deleted, and the relative pronoun can surface, bearing the internal case.
+A crucial characteristic of matching languages such as Polish is that they have separate morphemes for phi and case features. Therefore, the light head is structurally contained within the relative pronoun when the internal and the external case match. As a result, the light head can be deleted, and the relative pronoun can surface, bearing the internal case.
 
-When the internal and external case differ, neither the light head nor the relative pronoun is a constituent that is contained within the other element. None of the elements can be deleted, and there is no grammatical headless relative possible.
+When the internal and external case differ, neither the light head nor the relative pronoun is structurally contained within the other element. None of the elements can be deleted, and there is no grammatical headless relative possible.
