--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -873,3 +873,11 @@
   year={2018},
   publisher={Glossator}
 }
+
+@book{kayne1994,
+  title={The antisymmetry of syntax},
+  author={Kayne, Richard S and Kayne, Richard S and others},
+  volume={25},
+  year={1994},
+  publisher={MIT press}
+}
