--- a/languages-without-case-competition.tex
+++ b/languages-without-case-competition.tex
@@ -574,7 +574,7 @@ If the language lets its relative pronouns appear in the external case, the patt
 
 \begin{figure}[ht]
   \centering
-  % \begin{adjustbox}{max width=0.9\textwidth}
+  \begin{adjustbox}{max width=\textwidth}
   \begin{tabular}[b]{c}
       \toprule
     \begin{tikzpicture}[node distance=1.5cm]
@@ -611,7 +611,7 @@ If the language lets its relative pronouns appear in the external case, the patt
     \end{tikzpicture}\\
     \bottomrule
   \end{tabular}
-  % \end{adjustbox}
+  \end{adjustbox}
     \caption{Attested patterns in headless relatives}
     \label{fig:typology}
 \end{figure}
