--- a/the-basic-idea.tex
+++ b/the-basic-idea.tex
@@ -1110,7 +1110,7 @@ In Figure \ref{fig:acc-nom-syn}, I give the example in which the light head bear
         scale=0.9,
         fit to=tree]{};
         \node[draw,circle,
-        dotted,
+        dotted,ultra thick,
         fill=DG,fill opacity=0.2,
         scale=0.95,
         fit to=tree]{};
@@ -1133,7 +1133,7 @@ In Figure \ref{fig:acc-nom-syn}, I give the example in which the light head bear
             [\tsc{nom}P,
             tikz={
             \node[draw,circle,
-            dotted,
+            dotted,ultra thick,
             scale=0.9,
             fit to=tree]{};
             \node[label=below:\tit{s},
@@ -1358,7 +1358,7 @@ In Figure \ref{fig:nom-nom-unres}, I give an example in which this can happen. I
         tikz={
         \node[draw,
         constituent-deletion,yshift=-0.4cm,
-        dotted,
+        dotted,ultra thick,
         scale=1.3,
         fit to=tree]{};
         }
@@ -1391,7 +1391,7 @@ In Figure \ref{fig:nom-nom-unres}, I give an example in which this can happen. I
         tikz={
         \node[draw,
         constituent-deletion,yshift=-0.4cm,
-        dotted,
+        dotted,ultra thick,
         fill=DG,fill opacity=0.2,
         scale=1.25,
         fit to=tree]{};
@@ -1455,7 +1455,7 @@ In Figure \ref{fig:acc-nom-unres} I give an example of the second possible light
             scale=0.85,
             fit to=tree]{};
             \node[draw,circle,
-            dotted,
+            dotted,ultra thick,
             scale=0.9,
             fit to=tree]{};
             }
@@ -1488,7 +1488,7 @@ In Figure \ref{fig:acc-nom-unres} I give an example of the second possible light
             scale=0.85,
             fit to=tree]{};
             \node[draw,circle,
-            dotted,
+            dotted,ultra thick,
             scale=0.9,
             fit to=tree]{};
             }
@@ -1542,7 +1542,7 @@ Table \ref{tbl:overview-rel-light-ohg-lh1} shows the comparisons between the con
     \toprule
     situation           & \multicolumn{2}{c}{lexical entries}       & containment         & deleted             & surfacing           \\
     \cmidrule(lr){1-1}    \cmidrule(lr){2-3}                          \cmidrule(lr){4-4}    \cmidrule(lr){5-5}    \cmidrule(lr){6-6}
-                        & \tsc{lh}            & \tsc{rp}            &                     &                     &                     \\
+                        & \tsc{lh}-1          & \tsc{rp}            &                     &                     &                     \\
                           \cmidrule(lr){2-2}    \cmidrule(lr){3-3}
   \tsc{k}\scsub{int} = \tsc{k}\scsub{ext}               &
   [\tsc{k}\scsub{1}[ϕ]]                                 &
@@ -1715,7 +1715,7 @@ However, consider Figure \ref{fig:rel-lh-unres-mono-rep} again.
 Although the light head cannot be deleted by formal containment, it can be deleted by structural containment. The light head is namely still formally contained within the relative pronoun.\footnote{This reasoning holds for monomorphemic light heads and relative pronouns. I discuss the possibility of an external-only type of language with bimorphemic light head and relative pronouns in Chapter \ref{ch:deriving-unrestricted}.}
 
 In this dissertation I describe different language types in case competition in headless relatives. In my account, the different language types are a result of a comparison of the light head and the relative pronoun in the language.
-The larger syntactic context in which this takes place should be kept stable across languages. The operation that deletes the light head or the relative pronoun is the same for all language types. In this work, I do not specify on which larger syntactic structure and which deletion operation should be used. I Chapter \ref{ch:deriving-unrestricted}, I briefly discuss some general assumptions I am making regarding the larger syntactic structure to explain how an external case can win the case competition, which for the other language types too.
+The larger syntactic context in which this takes place should be kept stable across languages. The operation that deletes the light head or the relative pronoun is the same for all language types. Therefore, the larger syntactic structure and the deletion operator do not play a central role in the account. At the end of Chapter \ref{ch:deriving-unrestricted} I discuss the larger syntactic structure of headless relatives enters the discussion when I account for how an external case can win the case competition. There I show where in the larger syntax the (different) light heads are situated and that deletion takes place under c-command.
 
 To conclude, in this chapter I introduced the assumptions that headless relatives are derived from light-headed relatives and that relative pronouns contain at least one more feature than light heads. A headless relative is grammatical when either the light head or the relative pronoun is structurally or formally contained within the other element. This set of assumptions derives that only the most complex case can surface and that there is no language of the external-only type.
 
